# proctf-2019

./: .gitignore  .gitmodules  README.md
checkers/Binder/: .dockerignore  Dockerfile  build.sh  check.sh  checker.py  verify.sh
checkers/SePtoN/: SePtoN.sln  checker.sh
checkers/Spaceships/: checker.py
checkers/bb/: bb.checker.pl
checkers/ca/: ca.checker.pl
checkers/convolution/: checker.py  gen_keys.sh  privkey.pem  pubkey.pem
checkers/deer/: .gitignore  deer.checker.py  identity_server_http_client.py  requirements.txt  usernames.txt  users.db
checkers/dotFm/: api.py  checker.py  main.py  masking_connector.py  playlist_creator.py  requirements.txt  track_creator.py  unpacking_tools.py
checkers/drone_racing/: drone_racing.checker.py  program_generator.py  requirements.txt
cs/: cs-checkers.yml  inventory.cfg  inventory_dev.cfg
cs/group_vars/: cs  (+1 more)
deploy/: deploy_to_cloud_master.sh  get_service_files.sh  make_bb.sh  make_binder.sh  make_ca.sh  make_convolution.sh  make_deer.sh  make_dotfm.sh  make_drone_racing.sh  make_fraud_detector.sh  make_gallery.sh  make_geocaching.sh  make_handy.sh  make_notepool.sh  make_polyfill.sh  make_rubik.sh  make_septon.sh  make_service_ova.sh  make_spaceships.sh  make_sql_demo.sh  make_startup.sh  make_tracker.sh
services/startup/src/transport_http2/: Cargo.toml
services/startup/src/transport_http2/src/: main.rs
services/startup/transport_http/: Cargo.toml
services/startup/updater/: Cargo.toml
services/startup/updater/src/: main.rs
switches/: README.TXT  configure.py  day1_teams_ports.txt  teams_ports.txt
(+10956 files in other folders)
