[package]
name = "queue"
version = "0.1.0"
authors = ["Alexander Bersenev <bay@hackerdom.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=0.2.0-alpha.6", features = ["process"] }
tokio-net = "=0.2.0-alpha.6"
