[package]
name = "transport_http2"
version = "0.1.0"
authors = ["Alexander Bersenev <bay@hackerdom.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h2="0.2.0-alpha.3"
tokio = { version = "=0.2.0-alpha.6", features = ["process"] }
tokio-net = "=0.2.0-alpha.6"
nix = "0.11"
http = "0.1"
hashsum = { path = "../hashsum" }